--- a/src/index.css
+++ b/src/index.css
@@ -6,3 +6,15 @@
   width: 50px;
   height: 50px;
 }
+
+.navbar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 1000; /* Pastikan navbar berada di atas elemen lainnya */
+}
+
+.form-w{
+  width: 500px;
+}
